# app-livesync-gstreamer-hello

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  install_manifest.txt  livesync_gstreamer  main.cpp  webrtc-sendrecv  webrtc-sendrecv.c  webrtc_sendrecv.py
